# chat-with-data

./: .gitignore  README.md  docker-compose.yml  env.example  setup-dev.sh
backend/: Dockerfile  README.md  main.py  pyproject.toml  test_agents.py  test_prompts.py  uvicorn_config.py
backend/agents/: crew_agent.py  langgraph_orchestrator.py  sql_agent.py
backend/config/: settings.py
backend/prompts/: README.md  crew_agent_prompts.yaml  langgraph_prompts.yaml  sql_agent_prompts.yaml
backend/services/: chat_service.py  database_service.py  file_service.py  langfuse_service.py  prompt_service.py  vector_service.py
frontend/: Dockerfile  README.md  pyproject.toml  streamlit_app.py
frontend/config/: __init__.py  settings.py
mongodb/init/: init-mongo.js
