[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-with-data-backend"
version = "0.1.0"
description = "FastAPI backend with LangGraph and CrewAI for intelligent data analysis conversations"
authors = [
    {name = "Diego Saenz", email = "dosaenz28@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and Web Framework
    "fastapi==0.112.0",
    "uvicorn==0.30.0",
    "python-multipart==0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # LangChain and LangGraph (Compatible versions)
    "langchain>=0.2.0,<0.3.0",
    "langchain-core>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.7,<0.2.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-experimental>=0.0.60,<0.1.0",
    "langchain-qdrant>=0.1.0,<0.2.0",
    "langgraph>=0.2.0,<0.3.0",
    "langgraph-checkpoint>=1.0.0,<2.0.0",
    # CrewAI - Multi-agent collaboration framework
    "crewai>=0.130.0,<0.135.0",
    # Database drivers
    "pymongo>=4.6.0,<5.0.0",
    "motor>=3.3.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0",
    # Vector Database
    "qdrant-client>=1.6.0",
    # Redis
    "redis>=5.0.0",
    # AI/ML Libraries
    "openai>=1.30.0,<2.0.0",
    "anthropic>=0.25.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    # Data Processing (Core libraries only, no PandasAI)
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "openpyxl>=3.1.5",
    "xlrd==2.0.1",
    "python-docx==1.1.0",
    "pypdf2==3.0.1",
    "chardet==5.2.0",
    "sqlparse>=0.4.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.0",
    "bcrypt>=4.0.0",
    "pyyaml>=6.0.0",
    # Monitoring and Logging
    "loguru>=0.7.0",
    "langfuse==3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.23.0",
    "black==24.10.0",
    "flake8==7.1.0",
    "mypy==1.11.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "config", "models", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"] 
