[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-with-data-frontend"
version = "0.1.0"
description = "Streamlit frontend for intelligent data analysis conversations"
authors = [
    {name = "Diego Saenz", email = "dosaenz28@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "streamlit-chat>=0.1.0",
    "streamlit-option-menu>=0.3.0",
    "python-multipart>=0.0.6",
    "Pillow>=10.0.0",
    "altair>=5.0.0",
    "openpyxl>=3.1.0",
    "xlrd==2.0.1",
    "sqlalchemy>=2.0.0",
    "pymongo>=4.6.0",
    "qdrant-client>=1.6.0",
    "pydantic-settings>=2.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 
